--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -1,44 +1,42 @@
 <div class="container-fluid">
   <h1 style="text-align: center;"> <u>Flows Components</u> </h1>
   <div class="row row-button">
-    <button mat-raised-button color="primary" (click)=openAddModal()>Create</button>
-    <button mat-raised-button (click)=updateRow()>Update</button>
+    <button mat-raised-button color="primary" (click)="openAddModal('create')">Create</button>
+    <button mat-raised-button (click)="openAddModal('update')">Update</button>
     <button mat-raised-button color="warn" (click)="deleteRowComponent()">Delete</button>
   </div>
   <div class="flowTable">
     <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-      [animateRows]="true" class="ag-theme-balham" [columnDefs]="columnDefs" [rowData]="data"
-      (rowSelected)="onRowSelectedFlowComp($event)" [rowSelection]="rowSelection"
-      (selectionChanged)="onSelectionChange()" (gridReady)="onGridReady($event)"></ag-grid-angular>
+      [animateRows]="true" class="ag-theme-balham" [columnDefs]="columnDefs" [rowData]="data" (rowSelected)="onRowSelectedFlowComp($event)"
+      [rowSelection]="rowSelection" (selectionChanged)="onSelectionChange()" (gridReady)="onGridReady($event)"></ag-grid-angular>
   </div>
 
 
   <h1 style="text-align: center;" *ngIf="selectedFlow[0]?.connector"> <u>Available Connectors</u> </h1>
   <div class="row row-button" *ngIf="selectedFlow[0]?.connector">
-    <button mat-raised-button color="primary" (click)=openAddConnectorModal()>Create</button>
-    <button mat-raised-button (click)=updateRowConnector()>Update</button>
+    <button mat-raised-button color="primary" (click)="openAddConnectorModal('create')">Create</button>
+    <button mat-raised-button (click)="openAddConnectorModal('update')">Update</button>
     <button mat-raised-button color="warn" (click)="deleteConnector()">Delete</button>
   </div>
   <div class="flowTable" *ngIf="selectedFlow[0]?.connector">
     <ag-grid-angular #agGrid style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-      (selectionChanged)="onSelectionConnectorChange()" [rowSelection]="rowSelection" [animateRows]="true"
-      class="ag-theme-balham" [columnDefs]="connectorColDef" [rowData]="connectorData"
-      (gridReady)="onGridConnectorReady($event)">
+      (selectionChanged)="onSelectionConnectorChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
+      [columnDefs]="connectorColDef" [rowData]="connectorData" (gridReady)="onGridConnectorReady($event)">
     </ag-grid-angular>
   </div>
 
-
-  <h1 style="text-align: center;"> <u>Micro Flows</u> </h1>
-  <div class="row row-button">
-    <button mat-raised-button color="primary" (click)=openAddMFModal()>Create</button>
-    <button mat-raised-button (click)=updateRowMicro()>Update</button>
-    <button mat-raised-button color="warn" (click)="deleteMicroFlow()">Delete</button>
-  </div>
-  <div class="flowTable">
-    <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-      (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection" [animateRows]="true"
-      class="ag-theme-balham" [columnDefs]="microColDef" [rowData]="microFlow"
-      (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
+  <div *ngIf="showMicroFlow">
+    <h1 style="text-align: center;"> <u>Micro Flows</u> </h1>
+    <div class="row row-button">
+      <button mat-raised-button color="primary" (click)="openAddMFModal('create')">Create</button>
+      <button mat-raised-button (click)="openAddMFModal('update')">Update</button>
+      <button mat-raised-button color="warn" (click)="deleteMicroFlow()">Delete</button>
+    </div>
+    <div class="flowTable">
+      <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
+        (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
+        [columnDefs]="microColDef" [rowData]="microFlow" (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
+    </div>
   </div>
 </div>
 
@@ -52,8 +50,7 @@
               <div class="form-group">
                 <label for="component_name">Component Name</label>
                 <input type="text" class="form-control" placeholder="Enter component name" id="component_name"
-                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
+                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
                 <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.component_name.errors.required">{{'require_name' | i18next}}</div>
                 </div>
@@ -64,8 +61,7 @@
               <div class="form-group">
                 <label for="label">Label</label>
                 <input type="text" class="form-control" placeholder="{{'placeholder_label' | i18next}}" id="label"
-                  formControlName="label" [(ngModel)]="iFlowComponent.label"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
+                  formControlName="label" [(ngModel)]="iFlowComponent.label" [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
                 <div *ngIf="submitted && form_control.label.errors" class="invalid-feedback">
                   <div *ngIf="form_control.label.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -77,8 +73,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="type">Type</label>
-                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type"
-                  [(ngModel)]="iFlowComponent.type" [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
+                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type" [(ngModel)]="iFlowComponent.type"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
                 <div *ngIf="submitted && form_control.type.errors" class="invalid-feedback">
                   <div *ngIf="form_control.type.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -87,9 +83,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="sequence_id">Sequence Id</label>
-                <input type="text" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
-                  [(ngModel)]="iFlowComponent.sequence_id" formControlName="sequence_id"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
+                <input type="text" class="form-control" placeholder="Enter Sequence Id" id="sequence_id" [(ngModel)]="iFlowComponent.sequence_id"
+                  formControlName="sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
                 <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
                   <div *ngIf="form_control.sequence_id.errors.required">should not be empty</div>
                 </div>
@@ -100,9 +95,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="dev_language">Development Language</label>
-                <input class="form-control" id="dev_language" placeholder="Enter Dev Language"
-                  formControlName="dev_language" [(ngModel)]="iFlowComponent.dev_language"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.dev_language.errors }">
+                <input class="form-control" id="dev_language" placeholder="Enter Dev Language" formControlName="dev_language"
+                  [(ngModel)]="iFlowComponent.dev_language" [ngClass]="{ 'is-invalid': submitted && form_control.dev_language.errors }">
                 <div *ngIf="submitted && form_control.dev_language.errors" class="invalid-feedback">
                   <div *ngIf="form_control.dev_language.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -112,8 +106,7 @@
               <div class="form-group">
                 <label for="dev_framework">Development Framework</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="dev_framework"
-                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.dev_framework.errors }">
+                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework" [ngClass]="{ 'is-invalid': submitted && form_control.dev_framework.errors }">
                 <div *ngIf="submitted && form_control.dev_framework.errors" class="invalid-feedback">
                   <div *ngIf="form_control.dev_framework.errors.required">should not be empty</div>
                 </div>
@@ -124,10 +117,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
-                <textarea class="form-control" rows="1" id="description"
-                  placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
-                  [(ngModel)]="iFlowComponent.description"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
+                <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
+                  formControlName="description" [(ngModel)]="iFlowComponent.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -137,9 +128,8 @@
               <div class="form-group">
                 <div class="form-check">
                   <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" formControlName="connector"
-                      [checked]="iFlowComponent.connector" [(ngModel)]="iFlowComponent.connector"
-                      value="">Connector</label>
+                    <input type="checkbox" class="form-check-input" formControlName="connector" [checked]="iFlowComponent.connector"
+                      [(ngModel)]="iFlowComponent.connector" value="">Connector</label>
                 </div>
               </div>
             </div>
@@ -149,15 +139,13 @@
         </form>
       </div>
       <div class="modal-footer">
-        <div class="form-group" *ngIf="!isDisableFlowComp">
-          <button type="button" class="btn button-create"
-            (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
+        <div class="form-group" *ngIf="isDisableFlowComp">
+          <button type="button" class="btn button-create" (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
-        <div class="form-group" *ngIf="isDisableFlowComp">
+        <div class="form-group" *ngIf="!isDisableFlowComp">
           <button type="button" class="btn button-create" (click)="updateFlowCompModel()">update</button>
-          <button type="button" class="btn button-close"
-            (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close" (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
@@ -187,8 +175,7 @@
               <div class="form-group">
                 <label for="description">Description</label>
                 <input type="text" class="form-control" placeholder="Enter Description" id="description"
-                  formControlName="description" [(ngModel)]="connector.description"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
+                  formControlName="description" [(ngModel)]="connector.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -200,8 +187,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="url">URL</label>
-                <input class="form-control" id="url" placeholder="Enter URL" formControlName="url"
-                  [(ngModel)]="connector.url" [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
+                <input class="form-control" id="url" placeholder="Enter URL" formControlName="url" [(ngModel)]="connector.url"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
                 <div *ngIf="submitted && form_control.url.errors" class="invalid-feedback">
                   <div *ngIf="form_control.url.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -211,12 +198,11 @@
         </form>
       </div>
       <div class="modal-footer">
-        <div class="form-group" *ngIf="!isUpdateConnector">
+        <div class="form-group" *ngIf="isDisplayConnector">
           <button type="button" class="btn button-create" (click)="createConnector()">{{ 'create' | i18next }}</button>
-          <button type="button" class="btn button-close"
-            (click)="onCloseConnectorHandled()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close" (click)="onCloseConnectorHandled()">{{ 'cancel' | i18next }}</button>
         </div>
-        <div class="form-group" *ngIf="isUpdateConnector">
+        <div class="form-group" *ngIf="!isDisplayConnector">
           <button type="button" class="btn button-create" (click)="updateConnector()">update</button>
           <button type="button" class="btn button-close" (click)="onCloseConnectorHandledUpdate()">{{ 'cancel' |
             i18next }}</button>
@@ -239,8 +225,7 @@
               <div class="form-group">
                 <label for="sequence_id">Sequence Id</label>
                 <input type="text" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
-                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
+                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
                 <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
                   <div *ngIf="form_control.sequence_id.errors.required">{{'require_name' | i18next}}</div>
                 </div>
@@ -250,10 +235,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="component_name">Component Name</label>
-                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name"
-                  [value]="selectedFlow[0]?.component_name" disabled formControlName="component_name"
-                  [(ngModel)]="iMicroFlow.component_name"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
+                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name" [value]="selectedFlow[0]?.component_name"
+                  disabled formControlName="component_name" [(ngModel)]="iMicroFlow.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
                 <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.component_name.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -266,8 +249,7 @@
               <div class="form-group">
                 <label for="micro_flow_step_name">Micro Flow name</label>
                 <textarea class="form-control" rows="1" id="micro_flow_step_name" placeholder="Enter Micro Flow Name"
-                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.micro_flow_step_name.errors }"></textarea>
+                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name" [ngClass]="{ 'is-invalid': submitted && form_control.micro_flow_step_name.errors }"></textarea>
                 <div *ngIf="submitted && form_control.micro_flow_step_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.micro_flow_step_name.errors.required">{{'require_description' | i18next}}
                   </div>
@@ -278,14 +260,13 @@
         </form>
       </div>
       <div class="modal-footer">
-        <div class="form-group" *ngIf="!isUpdateMF">
+        <div class="form-group" *ngIf="isDisplayMicroFlow">
           <button type="button" class="btn button-create" (click)="createMicroFLow()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseMFHandled()">{{ 'cancel' | i18next }}</button>
         </div>
-        <div class="form-group" *ngIf="isUpdateMF">
+        <div class="form-group" *ngIf="!isDisplayMicroFlow">
           <button type="button" class="btn button-create" (click)="updateMicroFlow()">update</button>
-          <button type="button" class="btn button-close"
-            (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close" (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
