--- a/application/clients/desktop/src/app/navigation/header-controls/header.language.component.html
+++ b/application/clients/desktop/src/app/navigation/header-controls/header.language.component.html
@@ -1,6 +1,6 @@
 <div class="lang-head">
   <span>
-    {{lastloggedintime}}
+    {{lastloggedintime|  date:'medium'}}
   </span>
   <span class="about-span" (click)="showAbout()">About</span>
   <ng-template ngFor let-lang [ngForOf]="languages" let-i="index">
