--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -54,23 +54,39 @@
 
 <!-- events action popup model -->
 <div id="EventPopup" class="modal" tabindex="-1" role="dialog" style="display: none">
-  <div class="modal-dialog modal-sm" role="dialog">
+  <div class="modal-dialog modal-lg" role="dialog">
     <div class="modal-content">
+        <div class="modal-header" style="display: block;">
+            <button type="button" class="close" (click)="cancelEvent()"
+             data-dismiss="modal" aria-hidden="true">x</button>
+            <h3>Choose an Event</h3>
+        </div>
+        <div class="modal-body">
+        
       <div class="container">
-        <form class="m-3" [formGroup]="eventFlows">
-          <div class="form-group row">
-            <label for="column">Choose an Event</label>
-            <select class="form-control" id="column" formControlName="selectEvent" [ngClass]="{ 'is-invalid': submitted && form_control.selectColumn.errors }">
-              <option value="" selected>none</option>
-              <option *ngFor="let flows of listOfFLows" [ngValue]="flows?._id">{{ flows?.label }}</option>
-            </select>
-            <div *ngIf="submitted && form_control.selectEvent.errors" class="invalid-feedback">
-              <div *ngIf="form_control.selectEvent.errors.required">This field is required
-              </div>
-            </div>
+          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
+          [rowSelection]="rowSelection" [rowData]="rowData" [animateRows]="true" [defaultColDef]="defaultColDef" domLayout='autoHeight'
+          [pagination]="true"
+          [paginationPageSize]="10"
+          [floatingFilter]="true"
+          (selectionChanged)="onSelectionChanged($event)" (gridReady)="onGridReady($event)">
+          </ag-grid-angular>
+
+    <!-- <form class="m-3" [formGroup]="eventFlows">
+      <div class="form-group row">
+        <label for="column">Choose an Event</label>
+        <select class="form-control" id="column" formControlName="selectEvent" [ngClass]="{ 'is-invalid': submitted && form_control.selectColumn.errors }">
+          <option value="" selected>none</option>
+          <option *ngFor="let flows of listOfFLows" [ngValue]="flows?._id">{{ flows?.label }}</option>
+        </select>
+        <div *ngIf="submitted && form_control.selectEvent.errors" class="invalid-feedback">
+          <div *ngIf="form_control.selectEvent.errors.required">This field is required
           </div>
-        </form>
+        </div>
       </div>
+    </form> -->
+  </div> 
+        </div>
       <div class="modal-footer">
         <div class="form-group">
           <button type="button" class="btn button-create" (click)="saveEvent()">ok</button>
