--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -26,6 +26,8 @@
     <br />
     <button class="btn btn-info" [routerLink]="['/feature-details']"
     [queryParams]="{featureId: feature._id,  projectId: project_id}">View Details</button>
+    <button class="btn btn-info ml-sm-3" (click)="openFeatureFlowDialog(feature._id)">Add
+        Flows</button>
     </div>
     </div>
     </div>
