--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -324,8 +324,8 @@
               </div>
             </div>
           </div>
-          <button type="button" class="btn button-create ok_btn" id="AddConnector" (click)="addCustomeConnector()">Add
-            custom connector</button>
+          <button type="button" class="btn button-create ok_btn" id="AddConnector" (click)="addExternalConnector()">Add
+            External connector</button>
         </form>
       </div>
       <div *ngIf="customeConncetor">
@@ -400,21 +400,19 @@
                 </select>
               </div>
               <div>
-                <div>Services</div>
+                <div>
+                  <h3>Services</h3>
+                </div>
                 <mat-radio-group layout="row">
                   <mat-radio-button class="example-radio-button" value="backEnd" (click)="backendSerice('backEnd')">
                     Backend service
                   </mat-radio-button>
+                  <mat-radio-button class="example-radio-button" value="frontEnd" (click)="frontEndService('frontEnd')">
+                    FrontEnd service
+                  </mat-radio-button>
                 </mat-radio-group>
-                <span>
-                  <mat-radio-group layout="row">
-                    <mat-radio-button class="example-radio-button" value="frontEnd" (click)="frontEndService('frontEnd')">
-                      FrontEnd service
-                    </mat-radio-button>
-                  </mat-radio-group>
-                </span>
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <div class="row">
                   <div class="col-md-6">
                     <h4>APIs and Methods</h4>
@@ -422,9 +420,17 @@
                   <button class="btn btn-primary" type="button">Add Connector
                     Properties</button>
                 </div>
+              </div> -->
+              <div>
+                <h3>Connector Types</h3>
               </div>
               <div class="row">
-                <div class="col-md-4">
+                <mat-radio-group aria-label="Select an option" class="ml-4">
+                  <mat-radio-button value="1" class="mr-2" (click)="onSubmit()">Quick connectors</mat-radio-button>
+                  <mat-radio-button value="2" class="mr-2"> Default Connector</mat-radio-button>
+                  <mat-radio-button value="3" class="mr-2"> Custom Connector</mat-radio-button>
+                </mat-radio-group>
+                <!-- <div class="col-md-4">
                   <button type="button" class="btn button-create ok_btn" id="AddConnector" (click)="onSubmit()">Quick
                     connectors</button>
                 </div>
@@ -435,7 +441,7 @@
                 <div class="col-md-4" style="right:29%">
                   <button type="button" style="background-color: #033668;" class="btn button-create ok_btn"
                     id="update">Custom Connector</button>
-                </div>
+                </div> -->
               </div>
             </form>
           </div>
