--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -404,10 +404,12 @@
                   <h3>Services</h3>
                 </div>
                 <mat-radio-group layout="row">
-                  <mat-radio-button class="example-radio-button" value="backEnd" (click)="backendSerice('backEnd')">
+                  <mat-radio-button class="example-radio-button" value="backEnd" (click)="backendSerice('backEnd')"
+                    [checked]="quickConnectors.service === 'backEnd'">
                     Backend service
                   </mat-radio-button>
-                  <mat-radio-button class="example-radio-button" value="frontEnd" (click)="frontEndService('frontEnd')">
+                  <mat-radio-button class="example-radio-button" value="frontEnd" (click)="frontEndService('frontEnd')"
+                    [checked]="quickConnectors.service === 'frontEnd'">
                     FrontEnd service
                   </mat-radio-button>
                 </mat-radio-group>
@@ -426,9 +428,12 @@
               </div>
               <div class="row">
                 <mat-radio-group aria-label="Select an option" class="ml-4">
-                  <mat-radio-button value="1" class="mr-2" (click)="onSubmit()">Quick connectors</mat-radio-button>
-                  <mat-radio-button value="2" class="mr-2"> Default Connector</mat-radio-button>
-                  <mat-radio-button value="3" class="mr-2"> Custom Connector</mat-radio-button>
+                  <mat-radio-button value="1" class="mr-2" value="quickConnectors"
+                    (click)="quickConnectorsMethod('quickConnectors')">Quick connectors</mat-radio-button>
+                  <mat-radio-button value="2" class="mr-2" value="defaultConnectors"
+                    (click)="defaultConnectorsMethod('defaultConnectors')"> Default Connector</mat-radio-button>
+                  <mat-radio-button value="3" class="mr-2" value="customeConncetor"
+                    (Click)="customeConncetorsMethod('customeConncetors')"> Custom Connector</mat-radio-button>
                 </mat-radio-group>
                 <!-- <div class="col-md-4">
                   <button type="button" class="btn button-create ok_btn" id="AddConnector" (click)="onSubmit()">Quick
@@ -448,8 +453,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn button-create ok_btn" id="update"
-          (click)="updateQuickConnetorEntity()">Update</button>
+        <button type="button" class="btn button-create ok_btn" id="update" (click)="onSubmit()">Update</button>
         <button type="button" class="btn button-close delete_btn" id="update" (click)="flowCancle()">Cancel</button>
       </div>
     </div>
