--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -14,8 +14,6 @@
           <button class="createEntityButton btn_color" mat-raised-button color="primary" (click)="saveEntityModel()">Add
             Entity</button>
         </div>
-
-
         <div class="row" style="margin: 0px;" *ngIf="featureEntityDetails.length> 0">
           <div class="col-md-4" *ngFor="let entity of featureEntityDetails; let i = index">
 
@@ -249,43 +247,43 @@
   </div>
 </div>
 
-<!-- <div class="modal-connector" *ngIf="customeConncetor" > -->
-<!-- class="modal-header" -->
-<!-- <div class="title">
-          Available APIs/Methods
+<!-- <div class="modal" tabindex="-1" role="dialog"> -->
+<!-- <div class="modal-dialog modal-lg" role="dialog"> -->
+<!-- <div class="model-content-pop" *ngIf = "modifyConnectorsId">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <label for="action">Are you delete the quick connectors</label>
         </div>
-      <div class="modal-body" style="min-height: 200px; max-height: 300px; overflow-x: scroll;">
-        <div class="m-3">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" placeholder="enter Dev Framework" id="name">
-              </div>
-              <div class="form-group">
-                <label for="url">End Point</label>
-                <input type="text" class="form-control" placeholder="enter Dev Framework" id="url">
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="description">Description</label>
-                <textarea rows="5" type="text" class="form-control" placeholder="enter Dev Framework" id="description"></textarea>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-md-6">
-                <h4>APIs and Methods</h4>
-              </div>
-                    <button class="btn btn-primary" type="button">Add Connector 
-                    Properties</button>
-                </div>
-              </div>
-            </div>
-          </div> -->
-<!-- </div> -->
+      </div>
+    </div>
+    <br>
+    <br>
+       <div class="row" style="justify-content: center;">
+        <button type="button" class="btn button-create ok_btn" id="update" (click)="onSubmit()">OK</button>
+        <button type="button" style="margin-left: 20px;" class="btn button-close delete_btn" id="update" (click)="flowCancle()">Cancel</button>
+      </div>
+  </div>
+</div> -->
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display':deleteConnectorPopup}">
+    <div class="modal-dialog modal-sm" role="dialog">
+      <div class="modal-content">
+        <!-- <div class="modal-header">
+    <h6 class="modal-title">Delete</h6>
+    <button type="button" class="close">&times;</button>
+    </div> -->
+        <div class="delete modal-body">
+          <p>Please click confirm to delete this screen ? </p>
+        </div>
+        <div class="modal-footer" style="padding: 5px">
+          <button type="button" class="btn btn-default" (click)="deleteConnector()">Confirm</button>
+          &nbsp;
+          <button type="button" class="btn btn-default" (click)="closedeleteConntorPopUp()">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayModel}">
   <div class="modal-dialog modal-lg" role="dialog">
@@ -391,6 +389,12 @@
               </div>
               <div class="form-group">
                 <label>Select Api's Methods</label>
+                <select class="form-control" formControlName="apiMethods" [(ngModel)] = "quickConnectors.apiMethods" name="apiMethods">
+                  <option *ngFor = "let apis of apiMethodArray">{{apis}}</option>
+                </select>
+              </div>
+              <!-- <div class="form-group">
+                <label>Select Api's Methods</label>
                 <select class="form-control" (change)="selectApis($event.target.value)">
                   <option value="" selected>Select Api's Methods</option>
                   <option value="post">post</option>
@@ -398,7 +402,13 @@
                   <option value="put">put</option>
                   <option value="delete">delete </option>
                 </select>
-              </div>
+              </div> -->
+              <!-- <div class="form-group">
+                <label>Select Api's Methods</label>
+                <select>
+                  <option *ngFor = "let apis of apiMethodArray">{{apis}}</option>
+                </select>
+              </div> -->
               <div>
                 <div>
                   <h3>Services</h3>
@@ -413,14 +423,6 @@
                     FrontEnd service
                   </mat-radio-button>
                 </mat-radio-group>
-                <span>
-                  <mat-radio-group layout="row">
-                    <mat-radio-button class="example-radio-button" value="frontEnd"
-                      (click)="frontEndService('frontEnd')">
-                      FrontEnd service
-                    </mat-radio-button>
-                  </mat-radio-group>
-                </span>
               </div>
               <!-- <div class="form-group">
                 <div class="row">
@@ -443,31 +445,20 @@
                   <mat-radio-button value="3" class="mr-2" value="customeConncetor"
                     (Click)="customeConncetorsMethod('customeConncetors')"> Custom Connector</mat-radio-button>
                 </mat-radio-group>
-
-                <!-- <button type="button" class="btn button-create ok_btn" id="AddConnector" (click)="onSubmit()">Quick
-                    connectors</button> -->
-                <!-- <div class="col-md-4" style="right:15%">
-                  <button type="button" style="background-color: #033668;" class="btn button-create ok_btn"
-                    id="update">Default Connector</button>
-                </div> -->
-                <!-- <div class="col-md-4" style="right:29%">
-                  <button type="button" style="background-color: #033668;" class="btn button-create ok_btn"
-                    id="update">Custom Connector</button>
-                </div> -->
               </div>
             </form>
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn button-create ok_btn" id="update" (click)="onSubmit()">Update</button>
-        <button type="button" class="btn button-close delete_btn" id="update" (click)="flowCancle()">Cancel</button>
+        <div class="modal-footer">
+          <button type="button" class="btn button-create ok_btn" id="update" (click)="onSubmit()">Update</button>
+          <button type="button" class="btn button-close delete_btn" id="update" (click)="flowCancle()">Cancel</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- </div> -->
-<!-- <div class="row" style="margin: 0px;">
+
+  <!-- </div> -->
+  <!-- <div class="row" style="margin: 0px;">
   <div class="col-md-12" style="display: contents;">
     <div class="col-md-3">
       <div class="card">
